--- a/src/package.xml
+++ b/src/package.xml
@@ -37,6 +37,7 @@
 		<members>MemberCasting</members>
 		<members>Order</members>
 		<members>Student</members>
+		<members>AccessingData</members>
         <name>ApexClass</name>
     </types>
 	<types>
@@ -66,7 +67,7 @@
         <members>Subject__c</members>
         <members>Teacher__c</members>
         <members>Year_Of_Class__c</members>
-	<members>Book__c</members>
+		<members>Book__c</members>
         <name>CustomObject</name>
     </types>
     <types>
@@ -98,7 +99,7 @@
         <members>Subject__c</members>
         <members>Teacher__c</members>
         <members>Year_Of_Class__c</members>
-	<members>Book__c</members>
+		<members>Book__c</members>
         <members>Book__c</members>
         <members>Student__c</members>
         <members>College__c</members>
