--- a/src/package.xml
+++ b/src/package.xml
@@ -52,6 +52,7 @@
         <members>Hello_World__c.First_Hello_World__c</members>
         <members>Hello_World__c.Second_Hello_World__c</members>
         <members>Hello_World__c.Third_Hell_World__c</members>
+	<members>Account.MyExtID__c</members>
         <name>CustomField</name>
     </types>
     <types>
