--- a/src/package.xml
+++ b/src/package.xml
@@ -1,34 +1,24 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-	<types>
-		<members>DynamicMapOfCountry</members>
-		<name>ApexClass</name>
-	</types>
-	<types>
-		<members>Country__c.Country_Code__c</members>
-		<members>Country__c.Country_JASON__c</members>
-		<members>Country__c.Total_District__c</members>
-		<members>Country__c.Total_States__c</members>
-		<members>District__c.Country_Name__c</members>
-		<members>District__c.District_Pin_Code__c</members>
-		<members>District__c.State__c</members>
-		<members>State__c.Country__c</members>
-		<members>State__c.State_s_Country__c</members>
-		<members>State__c.State_Code__c</members>
-		<members>State__c.Total_District__c</members>
-		<name>CustomField</name>
-	</types>
-	<types>
-		<members>Country__c</members>
-		<members>District__c</members>
-		<members>State__c</members>
-		<name>CustomObject</name>
-	</types>
-	<types>
-		<members>Country__c</members>
-		<members>District__c</members>
-		<members>State__c</members>
-		<name>CustomTab</name>
-	</types>
-	<version>53.0</version>
+    <types>
+        <members>TriggerAccountHandler</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>AccountTrigger</members>
+        <name>ApexTrigger</name>
+    </types>
+    <types>
+        <members>Account.Email__c</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>Account</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>Account.Axis_Bank</members>
+        <name>RecordType</name>
+    </types>
+    <version>53.0</version>
 </Package>
