--- a/src/package.xml
+++ b/src/package.xml
@@ -1,29 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>OpportunityTriggerHandler</members>
-        <members>TriggerAccountHelper</members>
+        <members>ContactTriggerHandler</members>
+        <members>DistrictTriggerHandler</members>
+        <members>StateTriggerHandler</members>
         <name>ApexClass</name>
     </types>
     <types>
-        <members>OpportunityTrigger</members>
-        <members>TriggerAccount</members>
+        <members>ContactTrigger</members>
+        <members>DistrictTrigger</members>
+        <members>StateTrigger</members>
         <name>ApexTrigger</name>
     </types>
     <types>
         <members>Account</members>
-        <members>Automobile_Presence_Sensor__c</members>
-        <members>Automobile_Sensor__c</members>
-        <members>Automobile_TDU__c</members>
-        <members>Automobile_Tag__c</members>
-        <members>Opportunity</members>
+        <members>Contact</members>
+        <members>Property__c</members>
+        <members>State__c</members>
         <name>CustomObject</name>
     </types>
     <types>
-        <members>Automobile_Presence_Sensor__c</members>
-        <members>Automobile_Sensor__c</members>
-        <members>Automobile_TDU__c</members>
-        <members>Automobile_Tag__c</members>
+        <members>Property__c</members>
         <name>CustomTab</name>
     </types>
     <version>53.0</version>
