--- a/src/package.xml
+++ b/src/package.xml
@@ -1,13 +1,15 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>ContactTriggerHandler</members>
+        <members>CountryTriggerHandler</members>
         <members>DistrictTriggerHandler</members>
         <members>StateTriggerHandler</members>
         <name>ApexClass</name>
     </types>
     <types>
         <members>ContactTrigger</members>
+        <members>CountryTrigger</members>
         <members>DistrictTrigger</members>
         <members>StateTrigger</members>
         <name>ApexTrigger</name>
